src/main/java/com/example/writemymail/error/NotValidTokenException.java
package com.example.writemymail.error;

public class NotValidTokenException extends RuntimeException {
    public NotValidTokenException(String message) {
        super(message);
    }
}